Style logo and hero item

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div id="page">
 			<header>
 				<a class="logo" title="Everyday Things" href="/">
-					Everyday Things
+					<span>Everyday Things</span>
 				</a>
 				<div class="hero">
 					<h1>Add interest with natural textures</h1>
